--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <p>
           Connect with me on
           <a
-            href="https://www.linkedin.com/in/pratik-kumar-583866194/"
+            href="www.linkedin.com/in/pratik-kumar-583866194"
             target="_blank"
             >Linkedin</a
           >
