--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Afacad:ital@0;1&family=Cinzel:wght@600&family=Exo+2:wght@300&family=Finlandica:ital@1&family=Gentium+Book+Plus:ital@1&family=Josefin+Sans:wght@300&family=Open+Sans:wght@300;400&family=Roboto+Slab&family=Roboto:wght@100&family=Ubuntu:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
-    <title>Your Name - Portfolio</title>
+    <link rel="shortcut icon" type="x-icon" href="signature logo.png">
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
