--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="container3">
         <h2>Resume</h2>
         <div class="buttons">
-          <a href="pratik_developer_resume.pdf" download class="download-btn">
+          <a href="PratikKumar_UIUX_Resume.pdf" download class="download-btn">
             <i class="fa-fa-download"></i>
             <button class="btn">Download Resume</button></a
           >
